--- a/app/views/homes/search_post.html.erb
+++ b/app/views/homes/search_post.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-4">
       <% if @menber.present? %>
-        <%= link_to(home_search_menber_path(:name=> params[:word]), class: 'list-content') do %>
+        <%= link_to(home_search_menber_path(word: params[:word]), class: 'list-content') do %>
           <h5>会員検索ヒット数</h5>
           <%= @menber.count %>件
         <% end %>
@@ -13,7 +13,7 @@
     </div>
     <div class="col-lg-4">
       <% if @post.present? %>
-        <%= link_to(home_search_post_path(:neme=> params[:word]), class: 'list-content') do %>
+        <%= link_to(home_search_post_path(word: params[:word]), class: 'list-content') do %>
           <h5>投稿検索ヒット数</h5>
           <%= @post.count %>件
         <% end %>
@@ -24,7 +24,7 @@
     </div>
     <div class="col-lg-4">
       <% if @tag.present? %>
-        <%= link_to(home_search_tag_path(:tag_name=> params[:word]), class: 'list-content') do %>
+        <%= link_to(home_search_tag_path(word: params[:word]), class: 'list-content') do %>
           <h5>タグ検索ヒット数</h5>
           <%= @tag.count %>件
         <% end %>
@@ -34,15 +34,20 @@
       <% end %>
     </div>
   </div>
-
-
-
-
-
   <div class="row">
     <div class="col-12-flex flex-lg-wrap">
       <h4 class="title">検索結果</h4>
-      <h4 class="result"><%=  %></h4>
     </div>
+  </div>
+  <div class="row flex-nowrap">
+    <% @posts.each do |post| %>
+      <div class="col-3">
+        <%= link_to post_path(post.id) do %>
+          <%= attachment_image_tag post, :image, :fill, fallback:'no_image.jpeg', format:'jpeg', style: "height:100%; width:100%;" %>
+                                                   <%#　fallback: 画像空欄時の代わりの画像,      style: ここで画像のサイズ指定しないと本来の画像のサイズになる%>
+          <h4><%=post.name%></h4>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
