--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <th><%= link_to 'ログアウト', destroy_menber_session_path, method: :delete %></th>
           <th>
             <%= form_with url:home_search_path, method: :get, local: :true do |f| %>
-              <%= f.text_field :word %>
+              <%= f.text_field :word, placeholder: "検索ワード", :size => "30*30" %>
               <%= f.submit "検索" %>
             <% end %>
           </th>
