--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -93,15 +93,23 @@
     <div class="col-lg-12">
       <%= form_with model:@comment, url:post_comments_path(@post), method: :post, local:true do |f| %>
       <%# routesの中でネストを組むと親側にidを付けないとエラーが発生する　%>
-        <%= f.text_field :comment_comment %>
+        <%= f.text_field :comment_comment, placeholder: "コメント記入", :size => "70*30" %>
         <%= f.submit '投稿' %>
       <% end %>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-12">
+      <h4>コメント一覧</h4>
       <% @comments.each do |comment| %>
-        <%= comment.comment_comment %>
+        <div class="comment_farame">
+          <%= comment.comment_comment %>
+        </div>
+        <span>
+          <%#= if @menber.comment %>
+              <%#= link_to '削除' post_comment_path(@comment), method: :delete　%>
+          <%# end %>
+        </span>
       <% end %>
     </div>
   </div>
