--- a/app/views/homes/search_menber.html.erb
+++ b/app/views/homes/search_menber.html.erb
@@ -1,48 +1,41 @@
 <div class="container">
+  <%= render 'homes/search', menber:@menbers, post:@posts, tags:@tag %>  <%#  部分テンプレート　　render 'homes/search'～　　homes/_search  _は勝手に消してくれる%>
   <div class="row">
-    <div class="col-lg-4">
-      <% if @menber.present? %>
-        <%= link_to(home_search_menber_path(:name=> params[:word]), class: 'list-content') do %>
-          <h5>会員検索ヒット数</h5>
-          <%= @menber.count %>件
-        <% end %>
-      <% else %>
-        <h5>会員検索ヒット数</h5>
-        <h5>検索一致がありません</h5>
-      <% end %>
+    <div class="col-12">
+      <h4>検索結果</h4>
+    <table>
+      <thead>
+        <th>アイコン</th>
+        <th>ニックンネーム</th>
+        <th>コメント</th>
+      </thead>
+    </table>
     </div>
-    <div class="col-lg-4">
-      <% if @post.present? %>
-        <%= link_to(home_search_post_path(:neme=> params[:word]), class: 'list-content') do %>
-          <h5>投稿検索ヒット数</h5>
-          <%= @post.count %>件
-        <% end %>
-      <% else %>
-        <h5>会員検索ヒット数</h5>
-        <h5>検索一致がありません</h5>
-      <% end %>
-    </div>
-    <div class="col-lg-4">
-      <% if @tag.present? %>
-        <%= link_to(home_search_tag_path(:tag=> params[:word]), class: 'list-content') do %>
-          <h5>タグ検索ヒット数</h5>
-          <%= @tag.count %>件
-        <% end %>
-      <% else %>
-        <h5>会員検索ヒット数</h5>
-        <h5>検索一致がありません</h5>
-      <% end %>
-    </div>
-  </div>
-
-
-
-
-
-  <div class="row">
+    
+    
+    
+    
+    
+    
+    
+    
+    
     <div class="col-12-flex flex-lg-wrap">
       <h4 class="title">検索結果</h4>
-      <h4 class="result"><%= @menber %></h4>
     </div>
+  </div>
+  <div class="row">
+    <% @menbers.each do |menber| %>
+      <%= link_to mypage_path(menber.id) do %>
+        <div class="col-4-auto">
+          <%= attachment_image_tag menber, :image, :fill, 300, 150, fallback:'no_image.jpeg', style: "height:100%; width:100%;" %>
+        </div>                                           <%#　fallback: 画像空欄時の代わりの画像,      style: ここで画像のサイズ指定しないと本来の画像のサイズになる%>
+        <div class="col-8-auot">
+          <p><%= menber.name %></p>
+          <p>\<%= menber.introduction %></p>
+        </div>
+      <% end %>
+
+    <% end %>
   </div>
 </div>
