--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-lg-6">
       <div class="title">
-        <span>銘柄</span>
-        <%= @post.name %>
+        <span>タイトル</span>
+        <%= @post.title %>
       </div>
       <div class="category">
         <span>香り</span>
