--- a/app/views/homes/search_tag.html.erb
+++ b/app/views/homes/search_tag.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= render 'homes/search', menber:@menbers, post:@posts, tag:@tag %>  <%#  部分テンプレート　　render 'homes/search'～　　homes/_search  _は勝手に消してくれる%>
+  <%= render 'homes/search', menber:@menbers, post:@posts, tag:@tag %>  <%#  部分テンプレート  render 'homes/search'～  homes/_search  _は勝手に消してくれる%>
   <div class="row">
     <div class="col-12-flex flex-lg-wrap">
       <h4 class="title">検索結果</h4>
@@ -8,7 +8,7 @@
   <div class="row flex-nowrap">
     <% @tag.posts.each do |post| %>
       <div class="col-3">
-        <%= link_to post_path(post.id) do %>
+        <%= link_to post_path(menber.id) do %>  <%# link_to　が効かない%>
           <%= attachment_image_tag post.post_images.first, :image, :fill, 150, 150, fallback:'no_image.jpeg', style: "height:100%; width:100%;" %>
         <% end %>
       </div>
