--- a/app/views/menbers/mypage.html.erb
+++ b/app/views/menbers/mypage.html.erb
@@ -29,7 +29,7 @@
             <% post_image = post.post_images.first %>
             <div class="col-12-flex flex-lg-wrap">  <%# この部分を　col-4~ にして画像をcolにあてはめたい　%>
               <%= link_to post_path(post_image), class: 'list-content' do %>
-                <p><%= attachment_image_tag post_image, :image, :fill, 200, 200 %></p>
+                <p><%= attachment_image_tag post_image, :image, :fill, 200, 200, fallback:'no_image.jpeg', size: "150x150" %></p>
               <% end %>
             </div>
           <% end %>
