--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="title">
-          <%= f.label :name, '銘柄' %>
-          <%= f.text_field :name %>
+          <%= f.label :title, 'タイトル' %>
+          <%= f.text_field :title %>
         </div>
         <div class="category">
           <%= f.label :kaori, '香り' %>
