--- a/app/views/homes/city.html.erb
+++ b/app/views/homes/city.html.erb
@@ -1,14 +1,19 @@
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      </div>
-      <%= params[:prefecture_name] %>
-        <% @prefecture.cities.each do |city| %>
-          <%= link_to  home_sakagura_path(city_id: city.id) do%>
-            <%= city.name %>
+  <p>
+    <h2 style="color:forestgreen"><%= params[:prefecture_name] %></h2>
+    <h4 style="color:coral">クリックしたら各市町村の酒蔵さんをみることができます</h4>
+  </p>
+  <div class="row ">
+    <% @prefecture.cities.each do |city| %>
+      <div class="sakgura,city, col-3 flex-wrap">
+        <% if city.sakaguras.present? %>
+          <%= link_to  home_sakagura_path(city_id: city.id), class: "btn btn-large btn-info" do%>
+            <h4><%= city.name %></h4>
           <% end %>
+        <% else %>
+          <h4 style="color:dimgray"><%= city.name %></h4>
         <% end %>
-      <%# end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 </div>
