--- a/app/views/homes/sakagura.html.erb
+++ b/app/views/homes/sakagura.html.erb
@@ -1,12 +1,13 @@
 <div class="container">
+  <h2 style="color:forestgreen"><%= @city.name %></h2>
   <div class="row">
-    <div class="col-lg-12">
+    <% @city.sakaguras.each do |sakagura| %>
+      <div class="sakgura,city, col-3 flex-wrap">
       <%#= @.prefecture.name %>
-      <% @sakagura.each do |sakagura| %>
-        <%= link_to sakagura.url do %>  <%#@sakaguraのなかにurlのカラムがはいっていて link_toでgoogleにせんいできるようにしたい%>
+        <%= link_to sakagura.url, class: "btn btn-large btn-info" do %>  <%#@sakaguraのなかにurlのカラムがはいっていて link_toでgoogleにせんいできるようにしたい%>
           <%= sakagura.name %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 </div>
