[update]rspec(model,view)更新

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -195,13 +195,13 @@
         </li>
       </ol>
 
-      <h2>第8条　(サービス内容の変更等)</h2>
+      <h2>第8条 (サービス内容の変更等)</h2>
       <p>
         製作者は，本サービスの内容を変更、追加または廃止することがあり、
         ユーザーはこれを承諾するものとします。
       </p>
 
-      <h2>第9条　(利用規約の変更)</h2>
+      <h2>第9条 (利用規約の変更)</h2>
       <ol>
         <li>
           製作者は以下の場合には、ユーザーの個別の同意を要せず、本規約を変更することができるものとします。
@@ -220,20 +220,20 @@
         <!--</li>-->
       </ol>
 
-      <h2>第10条　(個人情報の取扱い)</h2>
+      <h2>第10条 (個人情報の取扱い)</h2>
       <p>製作者は，本サービスの利用によって取得する個人情報については，製作者「プライバシーポリシー」に従い適切に取り扱うものとします。</p>
 
-      <h2>第11条　(権利義務の譲渡の禁止)</h2>
+      <h2>第11条 (権利義務の譲渡の禁止)</h2>
       <p>
         ユーザーは，製作者の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に
-      　譲渡することはできません。
+       譲渡することはできません。
       </p>
 
-      <h2>第12条　(準拠法・裁判管轄)</h2>
+      <h2>第12条 (準拠法・裁判管轄)</h2>
       <ol>
         <li>本規約の解釈にあたっては，日本法を準拠法とします。</li>
 
-        <li>本サービスに関して紛争が生じた場合には，製作者を管轄する裁判所を専属的合意管轄とします。</li>　<%# 専属的合意管轄はもちろん設定出来てない%>
+        <li>本サービスに関して紛争が生じた場合には，製作者を管轄する裁判所を専属的合意管轄とします。</li> <%# 専属的合意管轄はもちろん設定出来てない%>
       </ol>
     </div>
   </div>
@@ -241,7 +241,7 @@
     <% if menber_signed_in? %>
       <h4><%= link_to 'TOP', root_path, class: "btn btn-large btn-success" %></h4>
     <% else %>
-      <h4><%= link_to "登録画面に戻ります", new_menber_registration_path, class: "btn btn-large btn-success" %></h4>
+      <h4><%= link_to "登録画面に移動します", new_menber_registration_path, class: "btn btn-large btn-success" %></h4>
     <% end %>
   </div>
 </div>
