--- a/app/views/homes/search_menber.html.erb
+++ b/app/views/homes/search_menber.html.erb
@@ -27,7 +27,7 @@
               </td>
               <td>
                 <%= link_to mypage_path(menber.id) do %>
-                  <%= menber.introduction %>
+                  <%= menber.intorduction %>
                 <% end %>
               </td>
             </tr>
