--- a/app/views/menbers/edit.html.erb
+++ b/app/views/menbers/edit.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div class ="form-group">
           <span>コメント</span>
-          <%= f.text_area :introduction %>
+          <%= f.text_area :intorduction %>
         </div>
         <div class ="form-group">
           <%= f.submit "更新" %>
