--- a/app/views/menbers/mypage.html.erb
+++ b/app/views/menbers/mypage.html.erb
@@ -14,7 +14,7 @@
             </tr>
             <tr>
               <th>紹介文</th>
-              <th><%= @menber.introduction %></th>
+              <th><%= @menber.intorduction %></th>
             </tr>
           </thead>
         </table>
