--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="title">
-          <%= f.label :title, 'タイトル' %>
+          <%= f.label :title, '名前' %>
           <%= f.text_field :title %>
         </div>
         <div class="category">
