--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,16 +1,23 @@
 
 <div class="contaner">
   <div class="row">
-
+    <div class="col-12">
+      <p class="guidance">
+        ようこそ、いらっしゃい</br>
+        旅行先や出張中などで地酒のお探しの方は気になる</br>
+        地域をクリックしてください
+      </p>
+    </div>
+  </div>
+  <div class="row">
     <div>
       <div id="map-container"></div>
     </div>
-    <div>
-      <div id="jmap"></div>
-    </div>
-    <div class="col-lg-5" >
-      <p>
-      </p>
+    <div class="row">
+      <div class="col-12">
+        <p>
+        </p>
+      </div>
     </div>
   </div>
 </div>
