[update]devise=>エラーメッセージ日本語化,model=>バリデーション設定,

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,3 +43,26 @@
 .image-space{
   padding: 10px;
 }
+
+.transition{
+  margin-left: 30px;
+  font-Size: 20px;
+}
+
+.top_tag{
+  padding: 5px;
+  color-font: #FFABCE;
+}
+
+.error_messages{
+  padding-left: 100px;
+}
+
+.before_sign{
+  padding: 50px;
+  font-size: 20px;
+}
+
+.title{
+  padding-left: 70px;
+}
