--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,16 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
+        <% if @post %>
+          <% if @post.errors.any? %>
+            <h2><%= @post.errors.count %>errors prohibited this book from being saved:</h2>
+            <ul>
+              <% @post.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        <% end %>
         <div class="title">
           <%= f.label :title, '名前' %>
           <%= f.text_field :title %>
@@ -74,6 +84,7 @@
           <%= f.text_field :tag_name, placeholder: "タグ付けをする場合は入力してください" %>
         </div>
         <div class="image_field">
+          
           <%= f.attachment_field :post_images_images, multiple: true %>
           <%# 複数投稿  attachment_fieldを使う場合  %>
           <%# 例）今回の場合だと　　postモデルとアソシエーション関係の画像モデル_ カラム, multiple（多数）: true＜必須＞　%>
