--- a/app/views/homes/city.html.erb
+++ b/app/views/homes/city.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <p>
     <h2 style="color:forestgreen"><%= params[:prefecture_name] %></h2>
-    <h4 style="color:coral">クリックしたら各市町村の酒蔵さんをみることができます</h4>
+    <h4 style="color:coral">クリックすると各市町村の酒蔵さんをみることができます</h4>
   </p>
   <div class="row ">
     <% @prefecture.cities.each do |city| %>
       <div class="sakgura,city, col-3 flex-wrap">
-        <% if city.sakaguras.present? %>
+        <% if city.sakaguras_present? %>
           <%= link_to  home_sakagura_path(city_id: city.id), class: "btn btn-large btn-info" do%>
             <h4><%= city.name %></h4>
           <% end %>
