--- a/app/views/homes/search_post.html.erb
+++ b/app/views/homes/search_post.html.erb
@@ -11,7 +11,7 @@
         <div class="col-3 search" >
           <%# binding.pry %>
           <%= link_to post_path(post.id) do %>
-            <%= attachment_image_tag post_image, :image, :fill, 150, 150, fallback:'no_image.jpeg', style: "height:100%; width:100%;" %>
+            <%= attachment_image_tag post_image, :image, :fill, 150, 150, fallback:'no_image.jpeg', size: "200x200" %>
                                                      <%# fallback: 画像空欄時の代わりの画像,      style: ここで画像のサイズ指定しないと本来の画像のサイズになる%>
             <h4><%= post.title %></h4>
           <% end %>
