--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <div class="transition">
+      <table>
       <% if menber_signed_in? %>
         <tr>
-          <th><%= link_to 'TOP', root_path %></th>
-          <th><%= link_to 'マイページ', mypage_path(current_menber) %></th>
-          <th><%= link_to '投稿', new_post_path %></th>
-          <th><%= link_to '検索', home_search_path %></th>
-          <th><%= link_to 'ログアウト', destroy_menber_session_path, method: :delete %></th>
-          <th><%= link_to '利用規約・プライバシーポリシー', home_about_path %></th>
-          <th>
+          <th class="top_tag"><%= link_to 'TOP', root_path %> </th>
+          <th class="top_tag"><%= link_to 'マイページ', mypage_path(current_menber) %></th>
+          <th class="top_tag"><%= link_to '投稿', new_post_path %></th>
+          <th class="top_tag"><%= link_to '検索', home_search_path %></th>
+          <th class="top_tag"><%= link_to 'ログアウト', destroy_menber_session_path, method: :delete %></th>
+          <th class="top_tag"><%= link_to '利用規約・プライバシーポリシー', home_about_path %></th>
+          <th class="top_search">
             <%= form_with url:home_search_path, method: :get, local: :true do |f| %>
               <%= f.text_field :word, placeholder: "検索ワード", :size => "30*30" %>
               <%= f.submit "検索" %>
@@ -31,12 +32,13 @@
         </tr>
       <% else %>
         <tr>
-          <th><%= link_to 'TOP', root_path %></th>
-          <th><%= link_to '新規登録', new_menber_registration_path %></th>
-          <th><%= link_to 'ログイン', new_menber_session_path %></th>
-          <th><%= link_to '利用規約・ライバシーポリシー', home_about_path %></th>
+          <th class="top_tag"><%= link_to 'TOP', root_path %></th>
+          <th class="top_tag"><%= link_to '新規登録', new_menber_registration_path %></th>
+          <th class="top_tag"><%= link_to 'ログイン', new_menber_session_path %></th>
+          <th class="top_tag"><%= link_to '利用規約・ライバシーポリシー', home_about_path %></th>
         </tr>
       <% end %>
+      </table>
     </div>
   </head>
 
