--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,19 @@
 <div class="container">
   <div class="row">
+      <div class="col-12">
+        <% if @post %>
+          <% if @post.errors.any? %>
+            <h2><%= @post.errors.count %>件のエラーで投稿できませんでした</h2>
+            <ul>
+              <% @post.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  <div class="row">
     <div class="col-lg-6">
       <div class="title">
         <span>タイトル</span>
